Update control files

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: bbcarchdev-keys
-Section: unknown
-Priority: extra
+Section: admin
+Priority: important
 Maintainer: Mo McRoberts <mo.mcroberts@bbc.co.uk>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.3
