--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/bbcarchdev/deb-bbcarchdev-sandbox
 
 Package: bbcarchdev-keys
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ca-certificates, apt, debian-archive-keyring
+Depends: ${misc:Depends}, ca-certificates, apt, debian-archive-keyring
 Description: BBC Archve Development keyring
  This package contains public keys and certificates used by BBC Archive
  Development.
