--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: bbcarchdev-keys
+Source: deb-bbcarchdev-keys
 Section: admin
 Priority: important
 Maintainer: Mo McRoberts <mo.mcroberts@bbc.co.uk>
