--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,12 @@
-Source: deb-bbcarchdev-keys
+Source: bbcarchdev-keys
 Section: admin
 Priority: important
 Maintainer: Mo McRoberts <mo.mcroberts@bbc.co.uk>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.3
 Homepage: https://confluence.dev.bbc.co.uk/display/ADOPS
-Vcs-Git: git://github.com/bbcarchdev/deb-bbcarchdev-keys.git
-Vcs-Browser: https://github.com/bbcarchdev/deb-bbcarchdev-keys
+Vcs-Git: git://github.com/bbcarchdev/bbcarchdev-keys.git
+Vcs-Browser: https://github.com/bbcarchdev/bbcarchdev-keys
 
 Package: bbcarchdev-keys
 Architecture: any
